<resources>
    <string name="app_name">icarus Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_get_content">Get content</string>
    <string name="action_set_content">Set content</string>

    <string name="icon_code">&#xf000;</string>
    <string name="icon_bold">&#xf001;</string>
    <string name="icon_italic">&#xf002;</string>
    <string name="icon_underline">&#xf003;</string>
    <string name="icon_times">&#xf004;</string>
    <string name="icon_strike_through">&#xf005;</string>
    <string name="icon_list_ol">&#xf006;</string>
    <string name="icon_list_ul">&#xf007;</string>
    <string name="icon_quote_left">&#xf008;</string>
    <string name="icon_blockquote">@string/icon_quote_left</string>
    <string name="icon_table">&#xf009;</string>
    <string name="icon_link">&#xf00a;</string>
    <string name="icon_image">&#xf00b;</string>
    <string name="icon_minus">&#xf00c;</string>
    <string name="icon_hr">@string/icon_minus</string>
    <string name="icon_indent">&#xf00d;</string>
    <string name="icon_outdent">&#xf00e;</string>
    <string name="icon_unlink">&#xf00f;</string>
    <string name="icon_caret_down">&#xf010;</string>
    <string name="icon_caret_right">&#xf011;</string>
    <string name="icon_upload">&#xf012;</string>
    <string name="icon_undo">&#xf013;</string>
    <string name="icon_smile_o">&#xf014;</string>
    <string name="icon_tint">&#xf015;</string>
    <string name="icon_font">&#xf016;</string>
    <string name="icon_html5">&#xf017;</string>
    <string name="icon_mark">&#xf018;</string>
    <string name="icon_align_center">&#xf019;</string>
    <string name="icon_align_left">&#xf01a;</string>
    <string name="icon_align_right">&#xf01b;</string>
    <string name="icon_font_minus">&#xf01c;</string>
    <string name="icon_font_markdown">&#xf01d;</string>
    <string name="icon_checklist">&#xf01e;</string>
    <string name="icon_h1" translatable="false">H1</string>
    <string name="icon_h2" translatable="false">H2</string>
    <string name="icon_h3" translatable="false">H3</string>
    <string name="icon_h4" translatable="false">H4</string>
    <string name="icon_h5" translatable="false">H5</string>
    <string name="icon_h6" translatable="false">H6</string>
</resources>
