<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <WebView
        android:id="@+id/editor"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="99"
        android:gravity="center" />

    <HorizontalScrollView
        style="@style/EditorIcon"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_bold"
                style="@style/EditorIcon"
                android:text="@string/icon_bold" />

            <TextView
                android:id="@+id/button_link"
                style="@style/EditorIcon"
                android:text="@string/icon_link" />

            <TextView
                android:id="@+id/button_image"
                style="@style/EditorIcon"
                android:text="@string/icon_image" />

            <TextView
                android:id="@+id/button_list_ol"
                style="@style/EditorIcon"
                android:text="@string/icon_list_ol" />

            <TextView
                android:id="@+id/button_list_ul"
                style="@style/EditorIcon"
                android:text="@string/icon_list_ul" />

            <TextView
                android:id="@+id/button_blockquote"
                style="@style/EditorIcon"
                android:text="@string/icon_blockquote" />

            <TextView
                android:id="@+id/button_hr"
                style="@style/EditorIcon"
                android:text="@string/icon_hr" />

            <TextView
                android:id="@+id/button_align_left"
                style="@style/EditorIcon"
                android:text="@string/icon_align_left" />

            <TextView
                android:id="@+id/button_align_center"
                style="@style/EditorIcon"
                android:text="@string/icon_align_center" />

            <TextView
                android:id="@+id/button_align_right"
                style="@style/EditorIcon"
                android:text="@string/icon_align_right" />

            <TextView
                android:id="@+id/button_italic"
                style="@style/EditorIcon"
                android:text="@string/icon_italic" />

            <TextView
                android:id="@+id/button_indent"
                style="@style/EditorIcon"
                android:text="@string/icon_indent" />

            <TextView
                android:id="@+id/button_outdent"
                style="@style/EditorIcon"
                android:text="@string/icon_outdent" />

            <TextView
                android:id="@+id/button_math"
                style="@style/EditorIcon"
                android:text="@string/icon_code" />

            <TextView
                android:id="@+id/button_underline"
                style="@style/EditorIcon"
                android:text="@string/icon_underline" />
            <TextView
                android:id="@+id/button_html5"
                style="@style/EditorIcon"
                android:text="@string/icon_html5" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>